@@ -1,6 +1,11 @@
 2009-01-11  Bruce van der Kooij  <brucevdkooij@gmail.com>
 
 	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
+	Changed condition for commit to be more like TortoiseSVN's.
+
+2009-01-11  Bruce van der Kooij  <brucevdkooij@gmail.com>
+
+	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
 	* nautilussvn/lib/vcs/svn.py:
 	No longer add_watch's responsiblity to also do the status check, it should
 	never have been and it made things more complicated.
